--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gostack-desafio-09",
+  "name": "desafio-daatbase-relations",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
